--- a/index.html
+++ b/index.html
@@ -1,36 +1,39 @@
 <!DOCTYPE html>
-<html class="sol flora mundo">
+<html class="sol flora mundo" lang="en-US">
 <meta charset="utf-8">
-<meta name="theme-color" content="Gold">
+<meta name="theme-color" content="#bae">
 
-<title lang="es-CO">Mi cuerpo NO quiere tu opinion</title>
-
-<meta
-  name="viewport"
-  content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-<meta
-  name="description"
-  content="Yellow web poster based on stencil seen IRL on a yellow wall in Colombia"
-  lang="en-US">
-
-<link rel="stylesheet" href="opinion.css">
+<title>feeling mural</title>
+<meta name="viewport" content="width=device-width">
+<meta name="description" content="feeling dreaming healing mashup mural">
+<link rel="stylesheet" href="feeling.css">
+<link rel="prev" href="https://webmural.com/harmony">
+<link rel="next" href="https://webmural.com/octopus">
+<link rel="help" href="https://webmural.dev/feeling">
 
 <body class="cuerpo">
 
-<h1 class="voz" lang="es-CO">
-  Mi cuerpo NO quiere tu opinion
+<h1 class="voz">
+  feeling mural
 </h1>
 
 <figure class="spine">
-  <blockquote lang="es-CO" class="quote capo amor">
-    Mi cuerpo <em class="muy">no</em> quiere tu opinión<b class"muy">.</b>
+  <blockquote class="quote capo amor">
+    You got me <a href="https://octopus.boo">feeling</a>
   </blockquote>
-  <blockquote lang="en-US" class="quote capo amor jugo loco">
-    My body <em class="muy">doesn't</em> want your opinion<b class"muy">.</b>
+  <blockquote class="quote capo amor jugo loco">
+    <a href="https://webmural.com/dance">Mai</a>
+    <a href="https://webmural.com/mussel">Hz</a>
+    at the
+    <a href="https://webmural.com/7">sealion</a>
+  </blockquote>
+  <blockquote class="quote capo amor luna">
+    You <a href="https://webmural.com">got me</a>
+    <a href="https://porpoise.page">dreaming</a>
   </blockquote>
 </figure>
 
-<footer hidden>
-  Based on foto from Colombia
+<footer class="voz">
+  <cite>Dreamin'</cite>
+  <cite>Seven Lions</cite>
 </footer>
